# contact-manager

./: .gitignore  Contact.cpp  ContactListManager.cpp  ContactListManager.h  README.md  contact_manager.cpp  meson.build
.github/workflows/: main.yml
src/: main.cpp  meson.build
src/contact_manager/: Contact.h  ContactListManager.cpp  ContactListManager.h  meson.build
subprojects/: gtest.wrap
test/: meson.build  tests_main.cpp
test/contact_manager/: ContactListManagerTest.cpp  meson.build
