contact_manager_source = [
    'Contact.cpp',
    'ContactListManager.cpp'
]

project_header_files = [
    'Contact.h',
    'ContactListManager.h'
]

project_sources += contact_manager_source
contact_manager_lib = static_library('contact_manager',
                        contact_manager_source,
                        include_directories : src)